--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,6 @@ project(assignment1)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
 	rospy
-	roscpp
 	std_msgs
 	nav_msgs
 	geometry_msgs
@@ -71,10 +70,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
-   DEPENDENCIES
-   std_msgs
-   geometry_msgs
-   nav_msgs # Or other packages containing msgs
+   DEPENDENCIES # Or other packages containing msgs
  )
 
 ################################################
